<resources>
    <string name="app_name">Drive Tracker</string>
    <string name="new_trip">New Trip</string>
    <string name="my_trips">My Trips</string>
    <string name="description">Description</string>
    <string name="edit_data">Edit Data</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="start_manually">Start Manually</string>
    <string name="odometer_reading">Odometer Reading</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="view_trip">View Trip</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="not_set">Not set</string>
    <string name="odometer_start">Odometer Start</string>
    <string name="odometer_end">Odometer End</string>
    <string name="financial_year">Financial Year</string>
    <string name="end_trip">End Trip</string>
    <string name="finish">Finish</string>
</resources>