<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/calendarIcon"
        android:layout_width="126dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/tripPeriod"
        app:layout_constraintEnd_toStartOf="@id/tripDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tripDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="101 km"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tripPeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calendarIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tripPeriod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="10:12 - 11:30"
        app:layout_constraintBottom_toTopOf="@id/descriptionHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripDistance" />

    <TextView
        android:id="@+id/descriptionHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/description"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tripDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripPeriod" />

    <TextView
        android:id="@+id/tripDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:text="This trip was"
        app:layout_constraintBottom_toTopOf="@id/editTrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionHeading" />

    <Button
        android:id="@+id/editTrip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_light"
        android:text="@string/edit_data"
        app:layout_constraintBottom_toTopOf="@id/deleteTrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripDescription" />

    <Button
        android:id="@+id/deleteTrip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_dark"
        android:text="@string/delete_trip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTrip" />

</androidx.constraintlayout.widget.ConstraintLayout>